--- a/TP1/Fixtr/ConsoleApp1/ConsoleApp1.csproj
+++ b/TP1/Fixtr/ConsoleApp1/ConsoleApp1.csproj
@@ -44,11 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Address.cs" />
+    <Compile Include="ArrayFixture.cs" />
+    <Compile Include="ComplexFixture.cs" />
     <Compile Include="FixtureReflect.cs" />
+    <Compile Include="GeneratorIFixture.cs" />
     <Compile Include="IFixture.cs" />
+    <Compile Include="PrimitiveFixture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="School.cs" />
+    <Compile Include="StringFixture.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
