--- a/TP1_Parte1_Done/TP1/Fixtr/ConsoleApp1/ConsoleApp1.csproj
+++ b/TP1_Parte1_Done/TP1/Fixtr/ConsoleApp1/ConsoleApp1.csproj
@@ -45,8 +45,8 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="ArrayFixture.cs" />
+    <Compile Include="FixtureDateTime.cs" />
     <Compile Include="ComplexFixture.cs" />
-    <Compile Include="DefaultFixture.cs" />
     <Compile Include="FixtureReflect.cs" />
     <Compile Include="GeneratorIFixture.cs" />
     <Compile Include="IFixture.cs" />
