--- a/TP!_KATE/TP1/Fixtr/UnitTestProject1/Tests.csproj
+++ b/TP!_KATE/TP1/Fixtr/UnitTestProject1/Tests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleApp1\FixtureFixtr.csproj">
+      <Project>{71F5FC45-C3D8-4DBD-8B9E-63FC840945D9}</Project>
+      <Name>FixtureFixtr</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
